--- a/Dinamic V3/test-output/old/Default suite/classes.html
+++ b/Dinamic V3/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.dinamic.v3.test.DeleteCategory</td>
+<td>com.dinamic.v3.test.ServiceCharge</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>deletingCategory</td>
+<td>enableServiceCharge</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>seviceChargeAdd</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
