--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99b8e7">  <td>22/11/29 12:15:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCategory.deletingCategory()[pri:0, instance:com.dinamic.v3.test.DeleteCategory@6d4e5011]">deletingCategory</td> 
-  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>22/11/30 15:23:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">&gt;&gt;beforTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>22/11/30 15:23:46</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">enableServiceCharge</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>22/11/30 15:23:57</td>   <td>10944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">seviceChargeAdd</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
 </table>
