--- a/Dinamic V3/test-output/old/Default suite/methods.html
+++ b/Dinamic V3/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99b8e7">  <td>22/11/30 15:23:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">&gt;&gt;beforTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/11/30 15:23:46</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">enableServiceCharge</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/11/30 15:23:57</td>   <td>10944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@1b2abca6]">seviceChargeAdd</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>22/11/30 15:55:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.registration()[pri:0, instance:com.dinamic.v3.test.Registration@4efc180e]">registration</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/11/30 15:56:06</td>   <td>37880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@57cf54e1]">enableServiceCharge</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/11/30 15:56:17</td>   <td>48025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@57cf54e1]">seviceChargeAdd</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/11/30 15:55:29</td>   <td>-29</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@57cf54e1]">&gt;&gt;beforTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/11/30 15:55:56</td>   <td>27693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditingCompanyDetails.deletingCategory()[pri:0, instance:com.dinamic.v3.test.EditingCompanyDetails@48f278eb]">deletingCategory</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
 </table>
