--- a/Dinamic V3/test-output/old/Default suite/methods.html
+++ b/Dinamic V3/test-output/old/Default suite/methods.html
@@ -1,14 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>22/12/05 11:23:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">withoutItemDiscountPrice</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/05 11:23:34</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">ordersEntry</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/05 11:23:29</td>   <td>-4887</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/05 11:23:34</td>   <td>16</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/05 11:23:34</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">log</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/12/05 11:44:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@729d991e]">ordersEntry</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/12/05 11:44:29</td>   <td>-8955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditingCompanyDetails.deletingCategory()[pri:0, instance:com.dinamic.v3.test.EditingCompanyDetails@7c24b813]">deletingCategory</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/12/05 11:44:38</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@729d991e]">withoutItemDiscountPrice</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/12/05 11:44:24</td>   <td>-13530</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@729d991e]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/12/05 11:45:14</td>   <td>35894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@32502377]">seviceChargeAdd</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/12/05 11:44:37</td>   <td>-303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@729d991e]">log</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/12/05 11:45:03</td>   <td>25319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@32502377]">enableServiceCharge</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/12/05 11:44:29</td>   <td>-9036</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@32502377]">&gt;&gt;beforTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="90e579">  <td>22/12/05 11:45:25</td>   <td>47586</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@729d991e]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1150963491</td>   <td></td> </tr>
 </table>
